k8s/apps/invenio-deps/postgresql/namespace.yaml
# Namespace and governance for InvenioRDM PostgreSQL dependency
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    app.kubernetes.io/part-of: invenio-rdm
